# vrf-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs  cli.rs  generate_secp256k1.rs  secp256k1.json
src/: dummy.rs  lib.rs  p256v1.rs
src/openssl/: mod.rs  utils.rs
