[package]
name = "vrf"
version = "0.2.4"
description = "Fast and extensible Verifiable Random Function (VRF) library; currently supporting secp256k1, secp256r1 and sect163k1 curves"
keywords = ["vrf", "ecvrf", "secp256k1", "p256", "k163"]
categories = ["algorithms", "cryptography"]
license = "MIT"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2018"
homepage = "https://github.com/witnet/vrf-rs"
documentation = "https://docs.rs/vrf/"
repository = "https://github.com/witnet/vrf-rs"
readme = "README.md"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "witnet/vrf-rs", branch = "master" }

[dependencies]
thiserror = "2"
openssl = "0.10"
hmac-sha256 = "1.1.2"

[dev-dependencies]
clap = "2.32.0"
hex = "0.4"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = { version = ">=1.0" }

[features]
vendored = ["openssl/vendored"]
